--- a/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.scss
+++ b/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.scss
@@ -36,24 +36,31 @@
 .rem {
   background-image: url(../../../../../assets/bell.svg);
 }
+
 .collaborator {
   background-image: url(../../../../../assets/user.svg);
 }
+
 .color {
   background-image: url(../../../../../assets/color.svg);
 }
+
 .img {
   background-image: url(../../../../../assets/image.svg);
 }
+
 .archive {
   background-image: url(../../../../../assets/archieve.svg);
 }
+
 .unarchive {
   background-image: url(../../../../../assets/unachive.svg);
 }
+
 .more {
   background-image: url(../../../../../assets/more.svg);
 }
+
 .undo {
   background-image: url(../../../../../assets/undo.svg);
 }
@@ -98,6 +105,7 @@
 
 .menui {
   left: 25px;
+
   .menu1 {
     display: none;
   }
@@ -110,27 +118,23 @@
 }
 
 .colorbox {
-  width: 136px;
+  width: 450px;
   background-color: #fff;
-  box-sizing: border-box;
   z-index: 10;
-  padding: 5px 7px 3px;
-  position: absolute;
-  // transition: visibility 0s ease 0.218s, opacity 0.218s linear;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-}
+  padding: 0px 5px;
 
-.colorbox div {
-  border: 0.5px solid transparent;
-  border-radius: 50%;
-  box-sizing: border-box;
-  overflow: hidden;
-  height: 26px;
-  width: 26px;
-  margin: 2px;
-  // display: inline-flex;
-  display: inline-block;
-  border-color: #e0e0e0;
+  & > div {
+    border: 0.5px solid transparent;
+    border-radius: 50%;
+    box-sizing: border-box;
+    overflow: hidden;
+    height: 32px;
+    width: 32px;
+    margin: 2px;
+    // display: inline-flex;
+    display: inline-block;
+    border-color: #e0e0e0;
+  }
 }
 
 .mat-menu-content:not(:empty) {
@@ -149,19 +153,10 @@
 .reminders {
   width: 100%;
   z-index: 5003;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: opacity 0.218s;
   background: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 13px;
   outline: none;
-  padding: 6px 0;
-  position: absolute;
-  // max-width: 250px;
-  max-width: 300px;
-  position: absolute;
-  z-index: 5003;
   border-radius: 5px;
 }
 
@@ -176,12 +171,12 @@
   padding: 8px 15px;
   cursor: pointer;
   margin: 5px 0;
-  color: #3c4043;
   position: relative;
   list-style: none;
   margin: 5px 0;
   white-space: nowrap;
   height: 20px;
+  width: 200px;
 }
 
 .ch {
@@ -194,10 +189,11 @@
 
 .text {
   flex: 1 1 auto;
+  font-weight: 500;
 }
 
 .time {
-  color: rgba(60, 64, 67, 0.541);
+  color: rgb(30 32 33);
   flex: 1 1 auto;
   margin-left: 10px;
   max-width: 200px;
@@ -211,6 +207,14 @@
   background-size: 15px 15px;
   padding-left: 25px;
   color: #3c4043;
+  width: auto;
+  height: 18px;
+}
+
+.pos{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .pdt {
@@ -397,9 +401,11 @@
 }
 
 .lcon1 {
-  padding: 5px 10px 3px;
-  display: block;
-  cursor: pointer;
+  padding: 2px 10px;
+  margin-bottom: 5px;
+  justify-content: flex-start;
+  align-items: center;
+  display: flex;
 }
 
 .img {
@@ -409,7 +415,6 @@
   height: 18px;
   opacity: 0.54;
   width: 18px;
-  margin-top: 2px;
   background-position: center;
 }
 
@@ -424,8 +429,7 @@
 .txt2 {
   vertical-align: top;
   max-width: 165px;
-  margin-left: 7px;
-  padding-top: 4px;
+  margin-left: 8px;
   display: inline-block;
   word-wrap: break-word;
 }
