--- a/src/app/components/dashboard/components/pin/pin.component.html
+++ b/src/app/components/dashboard/components/pin/pin.component.html
@@ -1,2 +1,2 @@
-<div class="pin" title="Pin note" (click)="pinned(card)"></div>
+<div class="pin" title="Pin note" (click)="pinNote(card)"></div>
 <!-- <div class="unpin" title="Unpin note" (click)="unpinned()"></div> -->
