--- a/src/app/components/dashboard/components/update-note/update-note.component.scss
+++ b/src/app/components/dashboard/components/update-note/update-note.component.scss
@@ -93,11 +93,12 @@
 }
 
 .remboxc11 {
-  justify-content: center;
-  min-width: 35px;
+  min-width: 30px;
   padding: 3px 5px;
   height: 18px;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .clk {
