--- a/src/app/components/dashboard/components/user-notes/user-notes.component.html
+++ b/src/app/components/dashboard/components/user-notes/user-notes.component.html
@@ -1,23 +1,3 @@
-<!-- <div class="container">
-  <div class=child>
-    <div *ngFor='let card of getCards' class="ele1">
-      <div class="title" contenteditable="true">
-        {{card.title}}
-      </div>
-      <div class="descr" contenteditable="true">
-        {{card.description}}
-      </div>
-      <div class="iconbar">
-        <app-icons-toolbar [card]="card" [undo]="userNoteMsg" (action)="noteCall()" (trashact)="trashCall()">
-        </app-icons-toolbar>
-      </div>
-    </div>
-  </div>
-</div> -->
-<!-- beta -->
-
-<!-- ----------------------------------------------------------------------------- -->
-
 <div class="container" *ngIf="!viewType" style="height: 200px;">
   <div class="fullii">
     <!-- <div class="pinned">PINNED</div>
@@ -44,7 +24,8 @@
                 [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
                 {{card.reminder | date:'h:mm a'}}</label>
               <label class="time"
-                [ngStyle]="{'display':  (d0|date:'shortDate') != (card.reminder|date:'shortDate') && (d|date:'shortDate') != (card.reminder|date:'shortDate') && (d1|date:'shortDate') != (card.reminder|date:'shortDate') ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+                [ngStyle]="{'display':  (d0|date:'shortDate') != (card.reminder|date:'shortDate') && (d|date:'shortDate') != (card.reminder|date:'shortDate') && (d1|date:'shortDate') != (card.reminder|date:'shortDate') ? 'block' : 'none'}">{{card.reminder
+                | date:'MMMM d, h:mm a'}}</label>
             </div>
             <div class="dfds" (click)="remove()"></div>
           </div>
@@ -92,7 +73,8 @@
               [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder
+              | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
         </div>
@@ -132,7 +114,8 @@
               [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder
+              | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
         </div>
@@ -172,7 +155,8 @@
               [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder
+              | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
         </div>
