--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -18,7 +18,7 @@ title {
 }
 
 .mat-toolbar {
-  background: none;
+  background: white !important;
 }
 
 #row {
@@ -353,6 +353,7 @@ form svg {
 
 .sbar1 {
   flex: 1 0 auto;
+  margin-right: 5px;
 }
 
 .sul {
@@ -417,7 +418,7 @@ form svg {
 
 .example-container {
   height: 90%;
-  background: none;
+  background: white !important;
 }
 
 .example-sidenav {
