--- a/src/app/components/dashboard/components/take-note/take-note.component.scss
+++ b/src/app/components/dashboard/components/take-note/take-note.component.scss
@@ -47,7 +47,7 @@
   right: 65px;
 }
 .nic3 {
-  background-image: url(../../../../../assets/image.svg);
+  background-image: url(../../../../../assets/gallery.svg);
   right: 12px;
 }
 
