--- a/src/app/components/dashboard/components/user-notes/user-notes.component.html
+++ b/src/app/components/dashboard/components/user-notes/user-notes.component.html
@@ -2,39 +2,19 @@
   <div class="fullii">
     <!-- <div class="pinned">PINNED</div>
     <div class="pinned">OTHERS</div> -->
-    <div cdkDropList class="example-list" (cdkDropListDropped)=" drop($event)">
+    <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
       <div class="child edit" [style.background-color]="card.color" *ngFor="let card of getCards.cards" cdkDrag>
         <div class="ele1">
+          <!-- mind-bending and mind-blowing you can use a selector name has class name and render that component -->
           <div class="app-pin" [card]="card">
           </div>
           <div class="title" (click)="updateNote(card)">{{card.title}}</div>
           <div class="descr" (click)="updateNote(card)">{{card.description}}</div>
         </div>
-        <div class="rembox" [ngStyle]="{'display': card.reminder != '' || card.labels.length ? 'flex' : 'none'}">
-          <div class="remboxc1">
-            <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
-              <div class="clk"></div>
-              <label class="time"
-                [ngStyle]="{'display': (d0|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Yesterday,
-                {{card.reminder | date:'h:mm a'}}</label>
-              <label class="time"
-                [ngStyle]="{'display': (d|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Today,
-                {{card.reminder | date:'h:mm a'}}</label>
-              <label class="time"
-                [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
-                {{card.reminder | date:'h:mm a'}}</label>
-              <label class="time"
-                [ngStyle]="{'display':  (d0|date:'shortDate') != (card.reminder|date:'shortDate') && (d|date:'shortDate') != (card.reminder|date:'shortDate') && (d1|date:'shortDate') != (card.reminder|date:'shortDate') ? 'block' : 'none'}">{{card.reminder
-                | date:'MMMM d, h:mm a'}}</label>
-            </div>
-            <div class="dfds" (click)="remove()"></div>
-          </div>
-          <div class="remboxc1" *ngFor="let l of card.labels">
-            <div class="remboxc11">
-              <label style="font-size: 12px" class="time">{{l}}</label>
-            </div>
-          </div>
-        </div>
+
+        <app-note-labels [card]="card"></app-note-labels>
+       
+
         <div class="iconbar">
           <app-icons-toolbar [card]="card" [undo]="userNoteMsg" (action)="noteCall()" (trashact)="trashCall()"
             (archiveAct)="archiveCall()">
@@ -46,131 +26,3 @@
 </div>
 
 <!-- ----------------------------------------------------------------------------------------------- -->
-
-
-<div class="grid container" *ngIf="viewType">
-  <div class=contain>
-    <div class="gridele" *ngFor='let card of getCards.gridCards1' [style.background-color]="card.color">
-      <div class="ele" (click)="updateNote(card)">
-        <div class="titlee">
-          {{card.title}}
-        </div>
-        <div class="descrr">
-          {{card.description}}
-        </div>
-      </div>
-      <div class="rembox" [ngStyle]="{'display': card.reminder != '' || card.labels.length ? 'flex' : 'none'}">
-        <div class="remboxc1">
-          <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
-            <div class="clk"></div>
-            <label class="time"
-              [ngStyle]="{'display': (d0|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Yesterday,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display': (d|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Today,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder
-              | date:'MMMM d, h:mm a'}}</label>
-          </div>
-          <div class="remove" (click)="remove()"></div>
-        </div>
-        <div class="remboxc1" *ngFor="let l of card.labels">
-          <div class="remboxc11">
-            <label style="font-size: 12px" class="time">{{l}}</label>
-          </div>
-        </div>
-      </div>
-      <div class="iconbar">
-        <app-icons-toolbar [card]="card" [undo]="userNoteMsg" (action)="noteCall()" (trashact)="trashCall()">
-        </app-icons-toolbar>
-      </div>
-    </div>
-  </div>
-  <div class=contain>
-    <div class="gridele" *ngFor='let card of getCards.gridCards2' [style.background-color]="card.color">
-      <div class="ele" (click)="updateNote(card)">
-        <div class="titlee">
-          {{card.title}}
-        </div>
-        <div class="descrr">
-          {{card.description}}
-        </div>
-      </div>
-      <div class="rembox" [ngStyle]="{'display': card.reminder != '' || card.labels.length ? 'flex' : 'none'}">
-        <div class="remboxc1">
-          <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
-            <div class="clk"></div>
-            <label class="time"
-              [ngStyle]="{'display': (d0|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Yesterday,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display': (d|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Today,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder
-              | date:'MMMM d, h:mm a'}}</label>
-          </div>
-          <div class="remove" (click)="remove()"></div>
-        </div>
-        <div class="remboxc1" *ngFor="let l of card.labels">
-          <div class="remboxc11">
-            <label style="font-size: 12px" class="time">{{l}}</label>
-          </div>
-        </div>
-      </div>
-      <div class="iconbar">
-        <app-icons-toolbar [card]="card" [undo]="userNoteMsg" (action)="noteCall()" (trashact)="trashCall()">
-        </app-icons-toolbar>
-      </div>
-    </div>
-  </div>
-  <div class=contain>
-    <div class="gridele" *ngFor='let card of getCards.gridCards3' [style.background-color]="card.color">
-      <div class="ele" (click)="updateNote(card)">
-        <div class="titlee">
-          {{card.title}}
-        </div>
-        <div class="descrr">
-          {{card.description}}
-        </div>
-      </div>
-      <div class="rembox" [ngStyle]="{'display': card.reminder != '' || card.labels.length ? 'flex' : 'none'}">
-        <div class="remboxc1">
-          <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
-            <div class="clk"></div>
-            <label class="time"
-              [ngStyle]="{'display': (d0|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Yesterday,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display': (d|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Today,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
-              {{card.reminder | date:'h:mm a'}}</label>
-            <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder
-              | date:'MMMM d, h:mm a'}}</label>
-          </div>
-          <div class="remove" (click)="remove()"></div>
-        </div>
-        <div class="remboxc1" *ngFor="let l of card.labels">
-          <div class="remboxc11">
-            <label style="font-size: 12px" class="time">{{l}}</label>
-          </div>
-        </div>
-      </div>
-      <div class="iconbar">
-        <app-icons-toolbar [card]="card" [undo]="userNoteMsg" (action)="noteCall()" (trashact)="trashCall()"
-          (archiveAct)="archiveCall()">
-        </app-icons-toolbar>
-      </div>
-    </div>
-  </div>
-</div>
