--- a/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
+++ b/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
@@ -1,14 +1,43 @@
+<!-- make it a seperate component -->
 <div class="iconlist">
   <div class="toolbar">
-    <div class="rem" *ngIf=url [matMenuTriggerFor]="reminders"></div>
-    <div class="collaborator" *ngIf=url></div>
-    <div class="color" *ngIf=url [matMenuTriggerFor]="colri"></div>
-    <div class="img" *ngIf=url></div>
-    <div class="archive" (click)=archive(card) *ngIf=url [ngClass]="archiveB"></div>
-    <div class="unarchive" (click)=archive(card) *ngIf=url [ngClass]="unArchiveB"></div>
-    <div class="more" (click)=more()></div>
-    <div class="undo" *ngIf="undo"></div>
-    <!-- <div></div> -->
+    <button class="note-ctrls" mat-icon-button *ngIf=url [matMenuTriggerFor]="reminderMenu">
+      <span class="material-symbols-outlined small-icon">
+        add_alert
+      </span>
+    </button>
+
+    <button class="note-ctrls" mat-icon-button *ngIf=url>
+      <span class="material-symbols-outlined small-icon">
+        person_add
+      </span>
+    </button>
+
+    <button class="note-ctrls" mat-icon-button *ngIf=url [matMenuTriggerFor]="paletteMenu">
+      <span class="material-symbols-outlined small-icon">
+        palette
+      </span>
+    </button>
+
+    <button class="note-ctrls" mat-icon-button *ngIf=url>
+      <span class="material-symbols-outlined small-icon">
+        image
+      </span>
+    </button>
+
+    <button class="note-ctrls" mat-icon-button *ngIf=url (click)=archive(card)>
+      <span class="material-symbols-outlined small-icon">
+        {{archiveIco ? 'archive' : 'unarchive'}}
+      </span>
+    </button>
+
+    <button class="note-ctrls" mat-icon-button (click)=more()>
+      <span class="material-symbols-outlined small-icon">
+        more_vert
+      </span>
+    </button>
+
+    <!-- <div class="undo" *ngIf="undo"></div> -->
   </div>
 </div>
 
@@ -16,7 +45,9 @@
 <div class="menu" *ngIf="pop" [ngClass]="menuStyle">
   <div class="menu1">
     <div (click)=trash(card)>Delete Note</div>
-    <div [matMenuTriggerFor]="lmenu" (menuClosed)="isClosed(card)">Add label</div>
+    <div [matMenuTriggerFor]="lmenu" (menuClosed)="isClosed(card)">
+      {{ card?.labels.length ? 'Change labels' : 'Add labels'}}
+    </div>
     <div>Copy to Google Docs</div>
   </div>
   <div class="menu2">
@@ -26,8 +57,8 @@
 </div>
 
 <!-- colors -->
-<mat-menu class="colri" #colri="matMenu" yPosition="above" [overlapTrigger]="false" (menuClosed)="isOpened($event)"
-  panelClass="custom">
+<mat-menu class="colri" #paletteMenu="matMenu" yPosition="above" [overlapTrigger]="false"
+  (menuClosed)="isOpened($event)" panelClass="custom">
   <div class=colorbox>
     <div *ngFor="let obj of colorbox" [attr.title]="obj.title" (click)="color(obj,card)"
       [ngStyle]="{'background-color':obj.color}"></div>
@@ -35,7 +66,7 @@
 </mat-menu>
 
 
-<mat-menu #reminders="matMenu">
+<mat-menu #reminderMenu="matMenu">
   <div class="reminders" [style.display]="!pdt?'block':'none'">
     <div class="ch1">
       Reminder:
