--- a/src/app/components/dashboard/components/pin/pin.component.html
+++ b/src/app/components/dashboard/components/pin/pin.component.html
@@ -1,2 +1,17 @@
-<div class="pin" title="Pin note" (click)="pinNote(card)"></div>
-<!-- <div class="unpin" title="Unpin note" (click)="unpinned()"></div> -->
+<ng-container *ngIf="!card?.pinned; else pinned">
+    <button class="pin-btn" mat-icon-button title="Pin note" (click)="updatePin(true)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path fill="none" d="M0 0h24v24H0z" />
+            <path fill="#202124"
+                d="M17 4v7l2 3v2h-6v5l-1 1-1-1v-5H5v-2l2-3V4c0-1.1.9-2 2-2h6c1.11 0 2 .89 2 2zM9 4v7.75L7.5 14h9L15 11.75V4H9z" />
+        </svg>
+    </button>
+</ng-container>
+<ng-template #pinned>
+    <button class="pin-btn" mat-icon-button title="Unpin note" (click)="updatePin(false)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path fill="none" d="M0 0h24v24H0z" />
+            <path fill="#202124" d="M17 4a2 2 0 0 0-2-2H9c-1.1 0-2 .9-2 2v7l-2 3v2h6v5l1 1 1-1v-5h6v-2l-2-3V4z" />
+        </svg>
+    </button>
+</ng-template>
