--- a/src/app/components/dashboard/components/pin/pin.component.scss
+++ b/src/app/components/dashboard/components/pin/pin.component.scss
@@ -1,18 +1,11 @@
-.pin {
-  background-image: url(../../../../../assets/pin.svg);
-}
+.pin-btn {
 
-.unpin {
-  background-image: url(../../../../../assets/unpin.svg);
-}
-
-.pin,
-.unpin {
-  width: 42px;
+  width: 36px;
   height: 36px;
-  // float: right;
-  // background-color: burlywood;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0.7;
+  padding: 0;
+  margin: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
