--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -99,15 +99,15 @@
           </ul>
           <ul class="sul">
             <div class="qwer">LABELS</div>
-            <li class="sli" *ngFor="let l of labels.sort()" [routerLinkActive]="['active']"
-              [routerLink]="['labels', l]">
-              <a (click)=labelsPage(l)>
+            <li class="sli" *ngFor="let label of labels" [routerLinkActive]="['active']"
+              [routerLink]="['labels', label.name]">
+              <a (click)=labelsPage(label.name)>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="gb_jc">
                   <path
                     d="M17.63 5.84C17.27 5.33 16.67 5 16 5L5 5.01C3.9 5.01 3 5.9 3 7v10c0 1.1.9 1.99 2 1.99L16 19c.67 0 1.27-.33 1.63-.84L22 12l-4.37-6.16zM16 17H5V7h11l3.55 5L16 17z">
                   </path>
                 </svg>
-                <span class="stext">{{l}}</span>
+                <span class="stext">{{label.name}}</span>
               </a>
             </li>
             <li class="sli">
