--- a/src/app/components/dashboard/components/edit-labels/edit-labels.component.html
+++ b/src/app/components/dashboard/components/edit-labels/edit-labels.component.html
@@ -4,19 +4,18 @@
     <div class="edb12">
       <div class="sty plus"></div>
       <input class="default" type="text" placeholder="Create new label" [formControl]="label">
-      <div class="sty done" (click)="onAdd()"></div>
+      <div class="sty done" (click)="onAddLabel()"></div>
     </div>
-    <mat-error [ngStyle]="{display: exits ? 'block':'none'}">Label already exists</mat-error>
-    <div class="edb12" *ngFor='let label of labels; let i = index;'>
+    <mat-error [ngStyle]="{display: exists ? 'block':'none'}">Label already exists</mat-error>
+    <div class="edb12" *ngFor='let label of labelData; let i = index;'>
       <div class="sty label"></div>
-      <div class="sty bin" (click)="onRemove(label)"></div>
-      <input type="text" [value]=label #labelInput>
-      <!-- <div class="sty rename" (click)="onRename(i)" #pen></div> -->
-      <div class="sty done tla" (click)="onRename(label, labelInput.value, i)"></div>
+      <div class="sty bin" (click)="onRemoveLabel(i)"></div>
+      <input type="text" [value]=label.name #labelInput>
+      <div class="sty done tla" (click)="onRenameLabel(label, labelInput.value)"></div>
     </div>
   </div>
   <div class="edb2">
-    <div class="edb21" (click)="close()">
+    <div class="edb21" (click)="closeDialog()">
       Done
     </div>
   </div>
