--- a/src/app/components/dashboard/components/note-labels/note-labels.component.html
+++ b/src/app/components/dashboard/components/note-labels/note-labels.component.html
@@ -1,11 +1,11 @@
 <div class="lbls">
-    <div class="lbl-stl" *ngFor="let label of labels">
+    <div class="lbl-stl" *ngFor="let label of labels; let i = index">
         <div class="lbl-dim">
             <span class="material-symbols-outlined schedule-ico" *ngIf="label?.reminder">
                 schedule
             </span>
             <label class="lbl-txt">{{label.name}}</label>
-            <button class="rmv-lbl" mat-icon-button (click)="removeLabel(card, label, label.reminder)">
+            <button class="rmv-lbl" mat-icon-button (click)="removeLabel(card, label, i, label.reminder)">
                 <span class="material-symbols-outlined">
                     close
                 </span>
