--- a/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
+++ b/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
@@ -1,6 +1,19 @@
 <!-- make it a seperate component -->
 <div class="iconlist">
   <div class="toolbar">
+
+    <button class="note-ctrls" mat-icon-button *ngIf=!url (click)="delete(card)">
+      <span class="material-symbols-outlined small-icon">
+        delete_forever
+      </span>
+    </button>
+
+    <button class="note-ctrls" mat-icon-button *ngIf=!url (click)="restore(card)">
+      <span class="material-symbols-outlined small-icon">
+        restore_from_trash
+      </span>
+    </button>
+
     <button class="note-ctrls" mat-icon-button *ngIf=url [matMenuTriggerFor]="reminderMenu">
       <span class="material-symbols-outlined small-icon">
         add_alert
@@ -31,7 +44,7 @@
       </span>
     </button>
 
-    <button class="note-ctrls" mat-icon-button (click)=more()>
+    <button class="note-ctrls" *ngIf=url mat-icon-button (click)=more()>
       <span class="material-symbols-outlined small-icon">
         more_vert
       </span>
@@ -42,7 +55,7 @@
 </div>
 
 
-<div class="menu" *ngIf="pop" [ngClass]="menuStyle">
+<div class="menu" *ngIf="pop">
   <div class="menu1">
     <div (click)=trash(card)>Delete Note</div>
     <div [matMenuTriggerFor]="lmenu" (menuClosed)="isClosed(card)">
@@ -50,15 +63,10 @@
     </div>
     <div>Copy to Google Docs</div>
   </div>
-  <div class="menu2">
-    <div (click)="delete(card)">Delete forever</div>
-    <div (click)="restore(card)">Restore</div>
-  </div>
 </div>
 
 <!-- colors -->
-<mat-menu class="colri" #paletteMenu="matMenu" yPosition="above" [overlapTrigger]="false"
-  (menuClosed)="isOpened($event)" panelClass="custom">
+<mat-menu class="colri" #paletteMenu="matMenu" yPosition="above" [overlapTrigger]="false" panelClass="custom">
   <div class=colorbox>
     <div *ngFor="let obj of colorbox" [attr.title]="obj.title" (click)="color(obj,card)"
       [ngStyle]="{'background-color':obj.color}"></div>
@@ -189,7 +197,7 @@
     <div class="srch"></div>
   </div>
   <div class="lbl-items">
-    <div class="lbl-item" (click)="onAdd(l); $event.stopPropagation()"  *ngFor="let l of labels">
+    <div class="lbl-item" (click)="onAdd(l); $event.stopPropagation()" *ngFor="let l of labels">
       <span class="material-symbols-outlined check-ico">
         {{ l.active ?'check_box' : 'check_box_outline_blank'}}
       </span>
