--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -162,6 +162,7 @@ title {
   display: flex;
   // width: 60%
 }
+
 .button {
   background: none;
   border: none;
@@ -202,6 +203,7 @@ title {
     display: block;
     border: none;
   }
+
   .left {
     max-width: 130px;
     transition: max-width 0.218s ease-in;
@@ -270,6 +272,7 @@ form svg {
 .icons3 div:hover {
   opacity: 1;
 }
+
 .refreshico {
   background-image: url(../../../assets/refresh.svg);
   animation: spin3 0.6s linear;
@@ -283,6 +286,7 @@ form svg {
     -o-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
   }
+
   to {
     -moz-transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
@@ -294,6 +298,7 @@ form svg {
 .listico {
   background-image: url(../../../assets/listView.svg);
 }
+
 .gridico {
   background-image: url(../../../assets/grid-view.svg);
 }
@@ -393,7 +398,7 @@ form svg {
   cursor: pointer;
 }
 
-.sli > a svg {
+.sli>a svg {
   margin-top: 8px;
   opacity: 0.7;
 }
@@ -422,49 +427,12 @@ form svg {
 }
 
 .pbtns {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 338px;
-  height: 30px;
-  display: inline-block;
-  // background: rgba(0, 0, 0, 0.06);
+  text-align: center;
+  padding: 10px 0;
   border-top: 1px solid rgb(201, 199, 199);
+  padding-bottom: 4px;
 }
 
-.pbtns div {
-  // width: 186px;
-  // height: 30px;
-  display: inline;
-}
-
-.pbtns div button {
-  outline: none;
-  background: #f8f8f8;
-  margin: 0 20px;
-  padding: 0 12px;
-  width: 100.75px;
-  height: 28px;
-  border: 1px solid #c6c6c6;
-  font-size: 16px;
-  color: #666;
-}
-
-.pbtns div button:hover {
-  background: #f7f3f3;
-}
-
-.pbtns div:nth-child(2) > * {
-  float: right;
-}
-
-.pdet {
-  margin: 20px;
-}
-
-.pdet2 {
-  display: inline-block;
-  vertical-align: top;
-}
 
 .prof {
   max-width: 338px !important;
@@ -474,55 +442,86 @@ form svg {
   border: 1px solid #ccc;
 }
 
-.tiny2 {
-  background-size: 96px 96px;
-  border-radius: 50%;
-  display: inline-block;
-  flex: 1 0 auto;
-  margin-right: 20px;
-  overflow: hidden;
-  // position: relative;
-  height: 96px;
-  width: 96px;
-  z-index: 1;
-  background-image: url(https://images.pexels.com/photos/1212487/pexels-photo-1212487.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
-  background-color: gold;
+.wrapper {
+  padding: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.uball,
-.uball2 {
-  content: "";
-}
-
-.change {
-  width: 51px;
-  height: 17px;
-  top: 153px;
-  right: 268px;
-  position: fixed;
-  font-family: "google-sans", sans-serif;
-  background: rgba(0, 0, 0, 0.5);
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  font-size: 0.82rem;
-  font-weight: 500;
+.prof-avatr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  color: white;
-  cursor: pointer;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 20px;
+  border-radius: 50%;
+  background-color: #ffd602;
+  position: relative;
+
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+
+  span {
+    color: black;
+    font-weight: 500;
+    font-size: 50px;
+  }
+
+  .edit-profile {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #202124e3;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    border-radius: 50%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+    button {
+      justify-content: center;
+      align-items: center;
+      display: flex;
+
+    }
+
+    .edit-ico {
+      color: white;
+      font-size: 35px;
+    }
+  }
+
+  &:hover .edit-profile {
+    display: flex;
+  }
 }
 
-.pdet2 div {
-  padding: 5px;
-}
-
-#name {
-  font-size: 18px;
-  font-weight: 500;
+.usr-name,
+.usr-email {
   line-height: 1.5rem;
   letter-spacing: 0.00625em;
 }
+
+.usr-name {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.usr-email {
+  font-size: 14px;
+  font-weight: 400;
+  color: rgb(82, 81, 81);
+}
+
 
 .active {
   background-color: #feefc3;
@@ -533,26 +532,3 @@ form svg {
   background-color: transparent !important;
   // background-color: rgba(0,0,0,.05);
 }
-
-// overflow: hidden;
-// text-overflow: ellipsis;
-// white-space: nowrap;
-////////////////
-
-// .nbar {
-//   width: 600px;
-//   margin: 32px auto 16px auto;
-//   position: relative;
-// }
-
-// .nbar1 {
-//   box-shadow: 0 1px 4px 0 rgba(60, 64, 67, 0.302), 0 0px 6px 1px rgba(60, 64, 67, 0.149);
-//   background-color: #fff;
-//   border-radius: 8px;
-//   border-color: #e0e0e0;
-//   // border: solid transparent;
-//   border-width: 1px 1px 1px 6px;
-//   box-sizing: border-box;
-//   overflow: hidden;
-//   position: relative;
-// }
