--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -152,9 +152,7 @@
         <div class="wrapper" style="padding: 25px;">
           <div class="prof-avatr">
             <ng-container *ngIf="userAvatar; else defaultAvatar">
-              <img
-                src="https://plus.unsplash.com/premium_photo-1681488007344-c75b0cf8b0cd?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="">
+              <img [src]="userAvatar" alt="">
             </ng-container>
             <ng-template #defaultAvatar>
               <span>{{ usernameFirstLetter}}</span>
