--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+// * {
+//   box-sizing: border-box;
+// }
+
 
 html,
 body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
   height: 100%;
 }
 
 body {
-  margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-fill {
+  flex: 1 1 auto;
+}
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
 }
 
 .material-symbols-outlined {
