--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,15 @@ body {
     'GRAD' 0,
     'opsz' 24
 }
+
+.basic-btn {
+  text-align: left;
+  box-sizing: border-box;
+  width: 100%;
+  display: block;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
