--- a/src/app/pages/sketch/sketch.component.html
+++ b/src/app/pages/sketch/sketch.component.html
@@ -1,4 +1,4 @@
-<app-paint-toolbar></app-paint-toolbar>
-<div>
-    <canvas class=""></canvas>
+<app-paint-toolbar class="cool"></app-paint-toolbar>
+<div class="sketch-sheet">
+    <canvas id="canvas" tabindex="-1" width="2876" height="924" #canvas style="border: 1px solid silver; background-color: blueviolet;"></canvas>
 </div>
