--- a/src/app/pages/sketch/sketch.component.scss
+++ b/src/app/pages/sketch/sketch.component.scss
@@ -2,5 +2,10 @@
     width: 100%;
     height: 100%;
     display: block;
-    background-color: yellowgreen;
+}
+
+.sketch-sheet {
+    display: block;
+    height: calc(100% - 53px);
+    overflow: auto;
 }
