--- a/src/app/pages/auth/reset-password/reset-password.component.html
+++ b/src/app/pages/auth/reset-password/reset-password.component.html
@@ -9,7 +9,7 @@
           Reset your password
         </h1>
         <div>
-          Continue to Keep
+          Continue to App
         </div>
       </div>
       <div class="child1">
@@ -26,9 +26,9 @@
               <input matInput placeholder [type]="hide ?'text':'password'">
             </mat-form-field>
           </span>
-          <mat-icon id="eye" (click)="hide = !hide">{{
-                hide ? "visibility" : "visibility_off"
-              }}</mat-icon>
+          <mat-icon class="material-symbols-outlined" (click)="hide = !hide">
+            {{ !hide ? "visibility" : "visibility_off"}}
+          </mat-icon>
         </div>
         <div>
           <button mat-button class="button">Next</button>
