--- a/src/app/pages/auth/reset-password/reset-password.component.scss
+++ b/src/app/pages/auth/reset-password/reset-password.component.scss
@@ -152,7 +152,7 @@ h1 {
 }
 
 .button {
-  color: #fff;
+  color: #fff !important;
   background-color: #1a73e8;
   float: right;
   padding: 0 10px;
